--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@react-native-community/cli-platform-android": "^4.7.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   }
